<resources>
    <string name="app_name">PAM MAML 03</string>
    <string name="profile">Profile</string>
    <string name="fti">FTI</string>
    <string name="teknik_informatika">Teknik\nInformatika</string>
    <string name="manajemen_informatika">Manajemen\nInformatika</string>
    <string name="sistem_informasi">Sistem\nInformasi</string>
    <string name="pengembang">Pengembang</string>
    <string name="keluar">Keluar</string>
    <string name="visi_amp_misi"><![CDATA[Visi & Misi]]></string>
    <string name="daftar_dosen">Daftar Dosen</string>
    <string name="kembali">Kembali</string>
    <string name="tentang">Tentang</string>
    <string name="falah_name">Muhammad Falah Abdurrafi</string>
    <string name="falah_nim">20.01.53.0033</string>
    <string name="credits">Credits</string>
    <string name="attribution">Attribution :</string>
    <string name="flaticon">icons: Flaticon.com</string>
    <string name="fti_visi">Pada tahun 2020 menjadi fakultas teknologi informasi yang unggul, inovatif, adaptif dalam penerapan ilmu komputer dan informatika, berjiwa kewirausahaan dan berdaya saing nasional.</string>
    <string name="visi">VISI</string>
    <string name="misi">MISI</string>
    <string name="fti_misi_1">Menyelenggarakan pendidikan akademik dan profesional untuk menghasilkan lulusan yang kompetitif berdaya saing nasional, memiliki semangat terus berkembang, bermoral dan berjiwa kewirausahaan.</string>
    <string name="fti_misi_2">Mengembangkan penelitian di bidang komputer dan informatika yang terpadu, produktif dan terukur dalam rangka menunjang pengabdian kepada masyarakat.</string>
    <string name="fti_misi_3">Menyelenggarakan layanan dan kemitraan dengan pemerintahan, dunia usaha dan menjaga hubungan dengan alumni dalam rangka penyempurnaan proses pembelajaran.</string>
    <string name="ti_visi">Pada tahun 2020 menjadi program studi unggul dan inovatif di bidang teknik informatika, dengan lulusan berjiwa kewirausahaan dan berdaya saing nasional.</string>
    <string name="ti_misi_1">Menyelenggarakan pendidikan dan pengajaran di bidang teknologi informasi dan informatika.</string>
    <string name="ti_misi_2">Mengembangkan penelitian di bidang teknologi informasi dan informatika. yang terpadu, produktif dan terukur.</string>
    <string name="ti_misi_3">Memberikan layanan dan kemitraaan kepada masyarakat dalambentuk pengamalan ilmu pengetahuan, teknologi dan seni (ipteks).</string>
    <string name="si_visi">Pada tahun 2020 menjadi program studi unggulan, terdepan dan profesional di bidang penerapan sistem informasi, e-business maupun e-government yang inovatif dan adaptif berjiwa kewirausahaan serta berdaya saing nasional</string>
    <string name="si_misi_1">Mengembangkan organisasi program studi S1 sistem informasi yang transparan dan akuntabel berbasis TIK untuk mendukung Good University Governance.</string>
    <string name="si_misi_2">Menyelenggarakan pendidikan akademik untuk menghasilkan lulusan yang ahli dan kompetitif dalam bidang penerapan sistem informasi, e-business maupun e-government serta berdaya saing nasional, memilki semangat terus berkembang, berahklak mulia dan berjiwa kewirausahaan.</string>
    <string name="si_misi_3">Mengembangkan penelitian dibidang pemrograman web dan teknologi multimedia yang terpadu, produktif dan terukur dalam rangka menunjang pengabdian kepada masyarakat.</string>
    <string name="si_misi_4">Menyelenggarakan kemitraan dengan alumni dalam rangka penyempurnaan proses pembelajaran.</string>
    <string name="mi_visi">Pada Tahun 2020 Menjadi Program Studi Manajemen Informatika yang profesional dan terkemuka dalam mencetak tenaga ahli madya dibidang pemrograman web dan multimedia yang inovatif dan adaptif berjiwa kewirausahaan serta berdaya saing nasional.</string>
    <string name="mi_misi_1">Mengembangkan organisasi program studi D3 manajemen informatika yang transparan dan akuntabel berbasis TIK untuk mendukung Good University Governance (GUG).</string>
    <string name="mi_misi_2">Menyelenggarakan pendidikan professional untuk menghasilkan lulusan yang ahli dan kompetitif dalam bidang pemrograman web dan multimedia serta berdaya saing nasional, memiliki semangat terusber kembang, berahklak mulia dan berjiwa kewirausahaan.</string>
    <string name="mi_misi_3">Mengembangkan penelitian dan pelatihan di bidang pemrograman web dan multimedia yang terpadu, produktif dan terukur dalam rangka menunjang pengabdian kepada masyarakat.</string>
    <string name="mi_misi_4">Menyelenggarakan kemitraan dengan dunia usaha dan menjaga hubungan dengan alumni dalam rangka penyempurnaan proses pembelajaran.</string>
    <string name="dosen_name">Nama Dosen</string>
    <string name="kompetensi_utama">Kompetensi Utama</string>
    <string name="ti_ku_a">Menguasai Pelaksanaan proses Standar Tata Kelola Teknologi Informasi dengan tepat dan bertanggung jawab.</string>
    <string name="ti_ku_b">Mampu Melaksanakan Proses Pengembangan Sistem Informasi dengan tepat pada sebuah Organisasi.</string>
    <string name="ti_ku_c">Mampu melaksanakan Proses Instalasi, pengoperasian dan Perawatan Perangkat teknologi Informasi dan Jaringan untuk komunikasi data.</string>
    <string name="ti_ku_d">Mampu mendesain proses manajemen proyek secara terpadu dengan tepat dan bertanggung jawab.</string>
    <string name="ti_ku_e">Mampu menginstalasi dan merakit teknologi informasi berbasis internet/berteknologi web.</string>
    <string name="ti_ku_f">Memiliki kemampuan mengasah keahlian untuk meningkatkan karir dan profesi serta mampu memberikan solusi permasalahan yang tepat, luwes, dan beretika.</string>
    <string name="ti_ku_g">Mampu Belajar Terstruktur dan Mandiri.</string>
    <string name="ti_ku_h">Mampu bekerja dalam satu tim dan melaksanakan proses manajemen tim, komunikasi yang efektif serta mengembangkan dan mengaplikasikan ide-ide kreatif.</string>
    <string name="si_ku_a">Menguasai konsep tentang manajemen, organisasi( proses struktur dan perilaku).</string>
    <string name="si_ku_b">Menguasai konsep Sistem Informasi dan Teknologi Informasi dalam konteks sebuah sistem bisnis maupun non bisnis.</string>
    <string name="si_ku_c">Mampu menganalisis suatu bentuk sistem informasi baik bisnis maupun non bisnis untuk menemukan permasalahannya.</string>
    <string name="si_ku_d">Mampu membuat usulan rancangan sebuah sistem informasi baik bisnis maupun non bisnis berdasarkan analisa permasalahan yang telah diperoleh.</string>
    <string name="si_ku_e">Menguasai teknik dan metoda pengujian sistem baik dengan data sample atau data sesungguhnya.</string>
    <string name="si_ku_f">Menguasai teknik pemeliharaan terhadap sistem informasi yang ada maupun yang telah dikembangkan secara baik dan benar.</string>
    <string name="si_ku_g">Menguasai metode penelitian dengan metode kuantitatif dan kualitatif dibidang pengembangan sistem informasi baik dekstop, berbasis web maupun mobile.</string>
    <string name="si_ku_h">Mampu berkomunikasi dan menjalin hub. Interpersonal secaraprofesional dengan berbagai user yang telibat dalam pengembangan sistem.</string>
    <string name="si_ku_i">Mampu melakukan komunikasi menggunakan sarana teknologi informatika dan komputer.</string>
    <string name="si_ku_j">Mampu membuat suatu laporan hasil penelitian dan menyampaikan presentasi dengan baik.</string>
    <string name="si_ku_k">Menguasai teknik pengelolaan proyek sistem informasi untuk menjamin terlaksananya pengembangan sistem secara tepat waktu.</string>
    <string name="si_ku_l">Menguasai konsep basis data secara umum dan spesifik dalam konteks sebuah sistem informasi pada sebuah organisasi.</string>
    <string name="si_ku_m">Mampu menganalisis dan membuat rancangan kebutuhan database dalam sebuah sistem informasi berdasarkan proses bisnis organisasi.</string>
    <string name="si_ku_n">Mampu mengimplementasikan suatu rancangan database dari sebuah sistem informasi menggunakan tools database.</string>
    <string name="si_ku_o">Menguasai konsep basis data terdistribusi untuk menunjang ketersediaan data pada semua subsistem dalam sebuah sistem informasi.</string>
    <string name="si_ku_p">Menguasai teknologi web untuk mendukung pengembangan sistem informasi berbasis web.</string>
    <string name="si_ku_q">Menguasai salah satu bahasa pemrograman web untuk membangun sebuah rancangan sistem informasi berbasis web.</string>
    <string name="si_ku_r">Menguasai konsep basis data dalam konteks sebuah web pada sistem informasi berbasis web.</string>
    <string name="si_ku_s">Menguasai konsep web service dan pengembangannya dalam konteks sebuah sistem informasi baik bisnis maupun non bisnis.</string>
    <string name="si_ku_t">Mampu mengintalasi tools perancangan dan manajemen content sebuah web.</string>
    <string name="mi_ku_a">Mampu menjelaskan cara kerja mesin komputasi beserta piranti lain pendukungnya.</string>
    <string name="mi_ku_b">Mampu menjelaskan mengenai cara kerja setiap komponen-komponen atau sumberdaya komputasi.</string>
    <string name="mi_ku_c">Mampu dan terampil berfikir secara logis dalam menganalisa algoritma system dan mengimplementasikannya dalam kode program.</string>
    <string name="mi_ku_d">Mampu dan terampil dalam rancang bangun dan memperbaiki system antarmuka yang menghubungkan manusia dengan “mesin komputasi”.</string>
    <string name="mi_ku_e">Mampu memelihara data sistem sebuahling kungan berbasis informatika.</string>
    <string name="mi_ku_f">Mampu dan terampil membangun hingga memperbaiki program sebagai suatu perangkat lunak yang dapat berfungsi secara spesifik.</string>
    <string name="mi_ku_g">Mampu dan terampil mensinergikan sejumlah modul program dalam rangka membuat aplikasi dengan fitur-fitur yang diinginkan.</string>
    <string name="mi_ku_h">Mampu dan terampil menginstalasi sistem informasi yang di bangun dalam sebuah lingkungan yang relevan.</string>
    <string name="mi_ku_i">Mampu dan terampil membangun sebuah sistem terpadu yang terdiri dari berbagai jenis sistem informasi yang berbeda-beda dalam sebuah lingkungan yang sama di sebuah organisasi.</string>
    <string name="mi_ku_j">Mampu memperbaiki permasalahan dalam jaringan computer beserta mekanisme protocol komunikasinya.</string>
    <string name="mi_ku_k">Mampu menjelaskan system cerdas untuk berbagai kebutuhan aktivitas kehidupan manusia yang memberikan nilai tambah.</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="jabatan_fungsional">Jabatan Fungsional</string>
    <string name="status_ikatan_kerja">Status Ikatan Kerja</string>
    <string name="status_aktivitas">Status Aktivitas</string>
</resources>