<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background_blue"
    tools:context=".AboutActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_profile_fti_yellow_short" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:src="@drawable/photo_falah" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="60dp"
                android:gravity="center"
                android:fontFamily="@font/mavenpro_bold"
                android:text="@string/falah_name"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="24dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_background_yellow_outline"
                android:gravity="center"
                android:fontFamily="@font/mavenpro_bold"
                android:text="@string/falah_nim"
                android:textColor="@color/yellow_x1"
                android:textSize="20sp" />

            <!-- Garis Horizontal -->
            <View
                android:layout_width="32dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginVertical="32dp"
                android:background="#DDD"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/attribution"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingVertical="8dp"
                android:paddingHorizontal="24dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_background_yellow_outline"
                android:gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/flaticon"
                android:textColor="@color/yellow_x1"
                android:textSize="14sp" />

            <!-- Garis Horizontal -->
            <View
                android:layout_width="32dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginVertical="32dp"
                android:background="#DDD"/>

            <Button
                android:id="@+id/btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_button_black"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/kembali"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_baseline_keyboard_backspace_24"
                app:iconSize="22dp" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>