<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".SiVisiMisiActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="48dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_target" />

        <!-- BEGIN : Visi -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="32dp"
                android:paddingHorizontal="24dp"
                android:paddingTop="38dp"
                android:paddingBottom="24dp"
                android:background="@drawable/custom_background_white_outline_red"
                android:elevation="8dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/si_visi"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="6dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button_primary"
                android:elevation="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/visi"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </FrameLayout>
        <!-- END : Visi -->

        <!-- BEGIN : Misi -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:layout_marginHorizontal="32dp"
                android:paddingHorizontal="24dp"
                android:paddingTop="38dp"
                android:paddingBottom="24dp"
                android:background="@drawable/custom_background_white_outline_red"
                android:elevation="8dp">

                <!-- Misi 1 -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="4dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_button_primary"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/si_misi_1"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>

                </TableRow>

                <!-- Misi 2 -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="4dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_button_primary"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="2"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/si_misi_2"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>

                </TableRow>

                <!-- Misi 3 -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="4dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_button_primary"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="3"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/si_misi_3"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>

                </TableRow>

                <!-- Misi 4 -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="4dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_button_primary"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="4"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/si_misi_4"
                        android:textSize="12sp"
                        android:textColor="@color/black"/>

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="6dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_button_primary"
                android:elevation="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/misi"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </FrameLayout>
        <!-- END : Misi -->

        <Button
            android:id="@+id/btn_kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/custom_button_black"
            android:paddingLeft="32dp"
            android:paddingTop="8dp"
            android:paddingRight="32dp"
            android:paddingBottom="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/kembali"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:backgroundTint="@null"
            app:icon="@drawable/ic_baseline_keyboard_backspace_24"
            app:iconSize="22dp" />

    </LinearLayout>

</ScrollView>