<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg_profile_fti" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="110dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_unisbank" />

            <!-- BEGIN : Text "Profile FTI" -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8sp"
                    android:fontFamily="@font/mavenpro_bold"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="36sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mavenpro_bold"
                    android:text="@string/fti"
                    android:textColor="#FFF301"
                    android:textSize="36sp"/>

            </LinearLayout>
            <!-- END : Text "Profile FTI" -->

            <!-- BEGIN : CardView - Teknik Informatika -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_TI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                app:cardElevation="12dp"
                app:cardCornerRadius="60dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginHorizontal="32dp">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_webpage"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/teknik_informatika"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- END : CardView - Teknik Informatika -->

            <!-- BEGIN : CardView - Sistem Informasi -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_SI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                app:cardElevation="12dp"
                app:cardCornerRadius="60dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginHorizontal="32dp">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_cloud_computing"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/sistem_informasi"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- END : CardView - Sistem Informasi -->

            <!-- BEGIN : CardView - Manajemen Informatika -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_MI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginBottom="20dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                app:cardElevation="12dp"
                app:cardCornerRadius="60dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginHorizontal="32dp">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_hierarchy"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/manajemen_informatika"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!-- END : CardView - Manajemen Informatika -->

            <!-- Garis Horizontal -->
            <View
                android:layout_width="72dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="44dp"
                android:background="#DDD"/>

            <Button
                android:id="@+id/btn_tentang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@drawable/custom_button_accent"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/tentang"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_baseline_person_outline_24"
                app:iconSize="22dp" />

            <Button
                android:id="@+id/btn_keluar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="48dp"
                android:background="@drawable/custom_button_primary"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/keluar"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_baseline_close_24"
                app:iconSize="22dp" />


        </LinearLayout>

    </FrameLayout>

</ScrollView>